# todo-app

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: docker-build.yml
backend/: Dockerfile  family.db  init_users.py  main.py  pyproject.toml
backend/app/: auth.py  database.py  deps.py  models.py  schemas.py
backend/app/db/: database.py
backend/app/dependencies/: dependencies.py
backend/app/home/: camera_stream.py
backend/app/models/: __init__.py  poll_model.py  task_model.py  user_model.py
backend/app/models/cleanse/: image_analysis_model.py  image_duplicate_group_model.py  image_folder_model.py  image_model.py
backend/app/routes/: __init__.py  auth_route.py  camera_route.py  common_route.py  media_route.py  poll_route.py  task_route.py
backend/app/routes/cleanse/: cleanse_router.py
backend/app/schemas/: poll_schema.py  task_schema.py  user_schema.py
backend/app/schemas/cleanse/: image_analysis_schema.py  image_duplicate_schema.py  image_police_schema.py  image_schema.py
backend/app/security/: auth.py
backend/app/utils/: init_db.py
cleanse/: Dockerfile  main.py  pyproject.toml
cleanse/app/: detective.py  police.py  scan.py
deploy/: backend.yaml  frontend.yaml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: AdminUsers.tsx  App.tsx  App2.tsx  Login.tsx  api.ts  index.tsx  types.ts
frontend/src/api/: config.ts
mnt/json/: ks3-math.json  ks3-science.json  math-homework.json  science-ks3.json  scratch  wren-and-martin.json
nginx/: default.conf
(+34 files in other folders)
