[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==3.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "passlib==1.7.4",
    "pillow>=12.1.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
